--- a/ado1.html
+++ b/ado1.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Introdução ao JavaScript</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="lib/testefw.css">
         <link rel="stylesheet" href="ado1.css">
         <script src="lib/utils.js" defer></script>
         <script src="lib/testefw.js" defer></script>
         <script src="ado1-teste.js" defer></script>
-        <script src="ado1-gabarito.js" defer></script>
+        <script src="ado1.js" defer></script>
         <script>
             "use strict";
 
